fixing spacing for extra images gallery

--- a/styles/pages/DetailsDesktop.module.scss
+++ b/styles/pages/DetailsDesktop.module.scss
@@ -49,11 +49,11 @@
         margin: 0px;
         overflow-x: auto;
         overflow-y: hidden;
-        height: 130px;
+        height: 140px;
         background-color: $secondary;
 
         .extra_images_gallery_container {
-            height: 120px;
+            height: 110px;
             display: flex;
             flex-direction: row;
             flex-wrap: nowrap;
